--- a/pom.xml
+++ b/pom.xml
@@ -118,4 +118,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+		<finalName>${project.artifactId}</finalName>
+	</build>
 </project>
