--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<project.title>Demo Swing c/ Spring e JPA</project.title>
 		<user.name>YaW Tecnologia</user.name>
 		<site>http://www.yaw.com.br</site>
+        <querydsl.version>3.1.1</querydsl.version>
 	</properties>
 
 	<dependencies>
@@ -106,6 +107,23 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
+
+        <!-- QueryDSL -->
+        <dependency>
+            <groupId>com.mysema.querydsl</groupId>
+            <artifactId>querydsl-core</artifactId>
+            <version>${querydsl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mysema.querydsl</groupId>
+            <artifactId>querydsl-sql</artifactId>
+            <version>${querydsl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mysema.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>${querydsl.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
